--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A simple and easy main menu for Laravel using Bootstrap5",
     "type": "library",
     "require": {
-        "php": "^7.0"
+        "php": "^7.3|^8.0"
     },
     "license": "mit",
     "autoload": {
@@ -31,6 +31,7 @@
     ],
     "require-dev": {
         "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "laravel/framework": "^8.0"
     }
 }
